fix more about me arrow z-index issue

--- a/app/src/components/landing-screen/landing-screen.scss
+++ b/app/src/components/landing-screen/landing-screen.scss
@@ -42,15 +42,19 @@
                 @include md {
                     @include btn__split(#19535F, #0B7A75, #fff);
                 }
-                .arrow {
-                    border: solid #fff;
-                    border-width: 0 3px 3px 0;
-                    display: inline-block;
-                    padding: 4px;
-                }
-                .right {
-                    transform: rotate(-45deg);
-                    -webkit-transform: rotate(-45deg);
+                .btn {
+                    display: flex;
+                    align-items: center;
+                    background: #007bff;
+                    @include sm {
+                        background: none;
+                    }
+                    svg {
+                        padding: 3px 0 0 4px;
+                        @include sm {
+                            padding: 0;
+                        }
+                    }
                 }
             }
         }
